# documark

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
src/documark/: __init__.py
src/documark/cli/: __init__.py  main.py
src/documark/core/: __init__.py  async_converter.py  converter.py  metadata.py  patterns.py
src/documark/processors/: __init__.py  base.py
src/documark/processors/cloud/: __init__.py  google_docs.py
src/documark/processors/file/: __init__.py  docx.py  image.py  pdf.py
src/documark/utils/: __init__.py  image_utils.py
